  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Trunk  (unreleased)

    Restructuring

      - Removed deprecated support for product initialization based on
        '__ac_permissions__' and 'meta_types' attributes.

      - Collector #2213: Can't edit "old" ZopePageTemplate instances.

      - reStructuredText/ZReST: setting raw_enabled to 0 for security
        reasons

      - Collector #2113:  'zopectl test' masked Ctrl-C.

      - OFS Image: Image and File updated to use isinstance(data, str)
        and raises TypeError upon encountering unicode objects.

      - OFS Application: Updated deprecation warnings.
        Support for '__ac_permissions__' and 'meta_types' will be removed in
        Zope 2.11, 'methods' support might remain longer.

      - removed zLOG module which was deprecated since Zope 2.9

    Features added

      - added 'fast_listen' directive to http-server and webdav-source-server
        sections in etc/zope.conf in order to defer the opening of the sockets
        until the late startup phase. This in in particular useful when running
        Zope behind a loadbalancer (patch by Patrick Gerken).

    Bugs Fixed

      - Collector #2232: Can't call DTML templates from Page Templates

      - Collector #2198: Zope 3.3 fix breaks Five 1.5 test_getNextUtility

      - Collector #2206: Set PYTHONPATH to include existing PYTHONPATH
        in skel/bin/zopectl.in and skel/bin/runzope.in

      - Collector #2209: ZTUtils module could not be used inside ZPT

      - Collector #2208: rewriting/setting the 'charset' part of the
        content-type HTTP header will be done only for 'text/*'

      - Call setDefaultSkin on new requests created as the result of
        ConflictError retries.

      - Collector #2155: Fix wrong parameter being passed to
        logger's error() method, with tests.

      - Collector #2157: Expose name of broken class in SystemError raised